<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Instruction1Activity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="455dp"
        android:layout_height="236dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="132dp"
        app:layout_constraintBottom_toTopOf="@+id/instructions_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/group_1"
        tools:ignore="UnknownIdInLayout" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="263dp"
        android:layout_height="268dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="82dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/group_1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="monospace"
        android:text="@string/instruction_1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="311dp"
        android:layout_height="113dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif-monospace"
        android:text="@string/first_instruction"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/nextIns2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="monospace"
        android:text="@string/next"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView1"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>