<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionsActivity">

    <TextView
        android:id="@+id/instructions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:background="#5B8BC34A"
        android:fontFamily="monospace"
        android:text="@string/instruct_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/instructions_content"
        android:layout_width="276dp"
        android:layout_height="67dp"
        android:layout_marginTop="32dp"
        android:fontFamily="serif-monospace"
        android:text="@string/game_instructions"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions_title" />

    <Button
        android:id="@+id/ins_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/occur"
        android:fontFamily="serif-monospace"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions_content" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="223dp"
        android:layout_height="244dp"
        android:layout_marginStart="-40dp"
        android:layout_marginTop="-20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="243dp"
        android:layout_height="261dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="-40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ins_button"
        app:srcCompat="@drawable/group_1" />

</androidx.constraintlayout.widget.ConstraintLayout>