<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Instruction3Activity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="455dp"
        android:layout_height="236dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="132dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/group_1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="monospace"
        android:text="@string/instruction_3"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="354dp"
        android:layout_height="76dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif-monospace"
        android:text="@string/third_instruction"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="263dp"
        android:layout_height="268dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextIns4"
        app:srcCompat="@drawable/group_1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/nextIns4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="monospace"
        android:text="@string/let_s_start"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/back_to_home"
        android:layout_width="61dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

</androidx.constraintlayout.widget.ConstraintLayout>